Added an additional endpoint and fixed the previous issue where build was in a different location
